<resources>
    <string name="app_name">settings</string>
    <string name="settings">设置</string>
    <string name="settings_car">我的汽车</string>
    <string name="settings_wifi">WLAN设置</string>
    <string name="settings_bluetooth">蓝牙设置</string>
    <string name="settings_media">媒体设置</string>
    <string name="settings_sound">音频设置</string>
    <string name="settings_calendar">时间设置</string>
    <string name="driver_screen">驾驶员显示屏</string>
    <string name="brightness">亮度</string>
    <string name="supporting_system">驻车辅助系统</string>
    <string name="auto_open_camera">挂入倒档时自动开启摄像头</string>
    <string name="open_allcast_display">开启全景视图</string>
    <string name="car_light">车灯</string>
    <string name="lock_device">锁定装置</string>
    <string name="app_update">软件更新</string>
    <string name="download_center">下载中心</string>
    <string name="bluetooth_auto_rev">蓝牙自动接听</string>
    <string name="bluetooth_search">蓝牙搜索</string>
    <string name="bluetooth_modify">修改蓝牙名称/密码</string>
    <string name="bluetooth_name">IPhone7</string>
    <string name="bluetooth_connected">已连接</string>
    <string name="bluetooth_be_visible">汽车蓝牙可被发现</string>
    <string name="has_paired">已配对</string>
    <string name="has_not_paired">未配对</string>
    <string name="bluetooth_connecting">正在连接</string>
    <string name="wifi_open">WiFi开启</string>
    <string name="wifi_ap_open">WiFi热点开关</string>
    <string name="wifi_devices">可用网络...</string>
    <string name="media_driving_forbid">行车禁止视频</string>
    <string name="media_online_music">在线音乐</string>
    <string name="media_online_vedio">在线视频</string>
    <string name="media_storage">目前存储量</string>
    <string name="media_storage_size">1.5G</string>
    <string name="sound_effect">音效</string>
    <string name="sound_voice_hint">语音提示语</string>
    <string name="sound_key_hint">按键提示语</string>
    <string name="sound_adjust">声场调节</string>
    <string name="sound_balancer">均衡器</string>
    <string name="sound_volume">语音音量</string>
    <string name="time_auto">自动授时</string>
    <string name="time_hour">设置时间</string>
    <string name="time_year">设置日期</string>
    <string name="time_zone">选择时区</string>
    <string name="time_zone_desc">中国,北京时区</string>
    <string name="input_pwd">输入密码</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="bluetooth_scanning">正在扫描蓝牙设备</string>
</resources>
