<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="@dimen/dialog_height"
    android:background="@drawable/dialog_shape">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_0"
        android:layout_weight="@integer/weight_1"
        android:gravity="center"
        android:textColor="@color/color_white"
        android:textSize="@dimen/recycler_item_text_size"
        android:text="@string/input_pwd"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_pwd_height"
        android:id="@+id/input_pwd"
        android:textColor="@color/color_white"
        android:textSize="@dimen/recycler_item_text_size"
        android:paddingLeft="@dimen/dialog_line_margin"
        android:paddingRight="@dimen/dialog_line_margin"
        android:maxLines="1"
        android:layout_marginLeft="@dimen/dialog_input_marign"
        android:layout_marginRight="@dimen/dialog_input_marign"
        android:background="@drawable/dialog_input_bg"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_0"
        android:orientation="horizontal"
        android:layout_weight="@integer/weight_1">

        <Button
            android:layout_width="@dimen/width_0"
            android:layout_height="match_parent"
            android:layout_weight="@integer/weight_1"
            android:background="@null"
            android:gravity="center"
            android:id="@+id/cancel"
            android:textColor="@color/color_white"
            android:textSize="@dimen/recycler_item_text_size"
            android:text="@string/cancel"/>
        <ImageView
            android:layout_width="@dimen/line_height"
            android:background="@android:color/black"
            android:layout_marginTop="@dimen/dialog_line_margin"
            android:layout_marginBottom="@dimen/dialog_line_margin"
            android:layout_height="match_parent"
            />

        <Button
            android:layout_width="@dimen/width_0"
            android:layout_height="match_parent"
            android:layout_weight="@integer/weight_1"
            android:background="@null"
            android:gravity="center"
            android:id="@+id/confirm"
            android:textColor="@color/confirm_text_selector"
            android:textSize="@dimen/recycler_item_text_size"
            android:enabled="false"
            android:text="@string/confirm"/>
    </LinearLayout>



</LinearLayout>