<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/item_supporting_system"
    android:layout_width="match_parent"
    android:background="@drawable/settings_item_selector"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/recycler_item_height"
        android:gravity="center_vertical"
        android:id="@+id/supporting_system_header"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/width_0"
            android:layout_weight="@integer/weight_1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/recycler_item_margin_left"
            android:textSize="@dimen/recycler_item_text_size"
            android:textColor="@color/color_white"
            android:text="@string/supporting_system"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:src="@drawable/settings_right_item_arrow"
            android:scaleType="center"
            android:background="@null"
            android:paddingLeft="@dimen/brightness_progress_padding"
            android:paddingRight="@dimen/brightness_progress_padding"
            android:id="@+id/supporting_system_arrow"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/recycler_item_margin_right_60"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/recycler_divider_line"
            android:alpha="@dimen/alpha_0_0_9"/>
        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/supporting_system_content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_0"
            app:ael_duration="500"
            app:ael_orientation="vertical"
            android:background="@drawable/supporting_system_bg"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/recycler_item_height"
                android:gravity="center_vertical"
                android:id="@+id/auto_open_camera"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/width_0"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/recycler_item_margin_left"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/auto_open_camera"
                    android:textColor="@color/title_txt_color"
                    android:textSize="@dimen/recycler_item_text_size" />

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/recycler_item_margin_right"
                    android:background="@null"
                    android:id="@+id/auto_open_camera_switch"
                    android:thumb="@drawable/toggle_btn_track"
                    app:track="@drawable/toggle_btn_selector"
                     />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_below="@id/auto_open_camera"
                android:layout_height="@dimen/recycler_item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/width_0"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/recycler_item_margin_left"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/open_allcast_display"
                    android:textColor="@color/title_txt_color"

                    android:textSize="@dimen/recycler_item_text_size" />

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="@dimen/switch_track_width"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/recycler_item_margin_right"
                    android:background="@null"
                    android:id="@+id/open_allcast_display_switch"
                    android:thumb="@drawable/toggle_btn_track"
                    app:track="@drawable/toggle_btn_selector"
                    />
            </LinearLayout>
        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
    </FrameLayout>

</LinearLayout>